@@ -1,4 +1,4 @@
 Johan Dahlin      <zilch.am@home.se>
-Mikael Hallendal  <micke@codefactory.se>
-Richard Hult      <rhult@codefactory.se>
+Mikael Hallendal  <micke@imendio.com>
+Richard Hult      <richard@imendio.com>
 Ross Burton       <ross@burtonini.com>
