@@ -1,3 +1,7 @@
+2003-06-13  Mikael Hallendal <micke@imendio.com>
+
+        * *: Updated mine and Richard contact info
+
 2003-05-28  Stanislav Brabec  <sbrabec@suse.cz>
 
 	* libegg/toolbar/eggtoolitem.c: Fixed implicit declaration
